[package]
name = "demo"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
reqwest = "0.12.21"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio"] }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
