[package]
name = "demo"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
config = "0.15.11"
futures = "0.3.31"
once_cell = "1.21.3"
regex = "1.11.1"
reqwest = "0.12.21"
scraper = "0.23.1"
serde = "1.0.219"
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio"] }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
