[package]
name = "ProxyHydra"
version = "0.1.0"
edition = "2024"

[features]
default = ["sqlite"]
sqlite = ["sqlx/sqlite"]
mysql = ["sqlx/mysql"]
postgres = ["sqlx/postgres"]

[dependencies]
anyhow = "1.0.98"
chrono = {version = "0.4.41", features = ["serde"]}
config = "0.15.11"
once_cell = "1.21.3"
regex = "1.11.1"
reqwest = { version = "0.12.21", features = ["json"] }
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "postgres", "chrono", "mysql"] }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19" , features = ["env-filter"] }
async-trait = "0.1.88"
futures = "0.3.31"
salvo = {version = "0.79.0", features = ["anyhow"]}
rand = "0.9.1"
